# highlighter2

./: .gitignore  .gitmodules  README.md  justfile  mobile_cp.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/mobile/: justfile  package.json  vite.config.ts
apps/mobile/src-tauri/: tauri.conf.json
apps/mobile/src/routes/: +layout.svelte
apps/web/: .eslintrc.json  .prettierignore  .prettierrc  README.md  jsconfig.json  justfile  package.json  svelte.config.js  tailwind.config.cjs  vite.config.js
apps/web/src/: app.html  app.postcss
apps/web/src/lib/: currentUser.ts  store.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
highlighter/: README.md  package.json  svelte.config.js
highlighter/src/lib/: index.ts
highlighter/svelte-kit-lib/: README.md  package.json  tsconfig.json
mobile/: .eslintrc.cjs  .gitignore  android_config.sh  android_init.sh  android_release.sh  capacitor.config.ts  entitlements.plist  ios_init.sh  ios_release.sh  justfile  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.ts
mobile/android/: capacitor.settings.gradle
mobile/android/app/: build.gradle  capacitor.build.gradle
mobile/ios/App/: Podfile
mobile/ios/App/App/: Info.plist
mobile/src/: app.html
mobile/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/src/: lib.rs  main.rs
mobile/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
mobile/static/public/: bundle.js  bundle.js.map
web/: package.json
web/src/routes/: +layout.svelte
(+444 files in other folders)
