[package]
name = "highlighter"
version = "0.0.1"
description = "Highlighter app"
authors = ["you"]
license = ""
repository = ""
default-run = "highlighter"
edition = "2021"
rust-version = "1.60"

[lib]
name = "highlighter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.2", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.4", features = [] }
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
